--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "alicjagosiewska@gmail.com")
 Description: Tells you the truth.
+Import: crayon
 License: GPL
 Encoding: UTF-8
 LazyData: true
